apps/board-games/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: board-games
  labels:
    app.kubernetes.io/part-of: board-games
    platform.mousses.xyz/admission: audit
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
